--- a/styles/style.css
+++ b/styles/style.css
@@ -19,20 +19,27 @@ body {
 .sidebar
 {
     position: sticky;
-    top: 65px;
+    top: 50px;
     height: fit-content;
-    width: 300px;
+    width: 250px;
     background-color:#253644;
     margin-left: 50px;
     margin-top: 60px;
     border: 2px solid #363738; 
     border-radius: 10px;
 }
+.profile-img{
+    display: block;
+    width: 100px;
+    height: 100px;
+    margin-left: 75px;
+
+}
 .main
 {
     position: relative;
-    height: auto;
-    width: 850px;
+    height: fit-content;
+    width: 900px;
     background-color:#253644;
     margin-left: 30px;
     margin-top: 60px;
@@ -42,6 +49,15 @@ body {
 .about-p{
     font-size: 18px;
     color: lightgray;
+}
+.yellow-line
+{
+    background-color: #f27021;
+    height: 4px;
+    width: 40px;
+    border-radius: 10px;
+    margin-left: 18px;
+    margin-top: 20px;
 }
 .title
 {
@@ -165,6 +181,7 @@ img{
 {
     color: white;
     display: flex;
+    font-size: 16px;
 }
 .side{
     margin-bottom: 50px;
@@ -175,7 +192,8 @@ img{
 }
 .icon{
     margin-top: 4px;
-    margin-right: 4px;
+    margin-right:8px;
+    /* margin-left: 1px; */
 }
 a{
     color: #e2e8f0;
