--- a/styles/style.css
+++ b/styles/style.css
@@ -207,3 +207,8 @@ img{
 a{
     color: #e2e8f0;
 }
+@media only screen and (min-width : 1306px) {
+    .sidebar{
+        margin-left: 100px;
+    }
+}
